--- a/index.html
+++ b/index.html
@@ -6,21 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
   </head>
+
   <body>
-    <div>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-        assumenda voluptas voluptate. Consequatur ad eos sunt id necessitatibus
-        provident labore. Odio amet voluptates accusamus eligendi adipisci rem
-        eos, placeat quasi.
+    <section id="home">
+        <h1>Home</h1>
+      <p class="red">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
+        assumenda esse molestias ex culpa? Ipsam praesentium eos dignissimos
+        dolorem a earum tempora quisquam modi impedit numquam minus, deleniti
+        saepe? Sequi aspernatur delectus quisquam illo a illum neque eum quidem
+        facere accusamus nostrum aut dolores, libero ipsam? Nesciunt voluptatum
+        placeat labore.
       </p>
-    </div>
+      <a href="#info">Go to Info</a>
+    </section>
+    <section id="info">
+        <h1>Info</h1>
+      <p class="red">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
+        assumenda esse molestias ex culpa? Ipsam praesentium eos dignissimos
+        dolorem a earum tempora quisquam modi impedit numquam minus, deleniti
+        saepe? Sequi aspernatur delectus quisquam illo a illum neque eum quidem
+        facere accusamus nostrum aut dolores, libero ipsam? Nesciunt voluptatum
+        placeat labore.
+      </p>
+      <a href="#footer">Go to Footer</a>
+    </section>
+    <section id="footer">
+        <h1>Footer</h1>
+      <p class="blue">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
+        laborum!
+      </p>
+      <a href="#home">Back to top</a>
+    </section>
   </body>
 </html>
