--- a/index.html
+++ b/index.html
@@ -9,37 +9,8 @@
   </head>
 
   <body>
-    <section id="home">
-        <h1>Home</h1>
-      <p class="red">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
-        assumenda esse molestias ex culpa? Ipsam praesentium eos dignissimos
-        dolorem a earum tempora quisquam modi impedit numquam minus, deleniti
-        saepe? Sequi aspernatur delectus quisquam illo a illum neque eum quidem
-        facere accusamus nostrum aut dolores, libero ipsam? Nesciunt voluptatum
-        placeat labore.
-      </p>
-      <a href="#info">Go to Info</a>
-    </section>
-    <section id="info">
-        <h1>Info</h1>
-      <p class="red">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
-        assumenda esse molestias ex culpa? Ipsam praesentium eos dignissimos
-        dolorem a earum tempora quisquam modi impedit numquam minus, deleniti
-        saepe? Sequi aspernatur delectus quisquam illo a illum neque eum quidem
-        facere accusamus nostrum aut dolores, libero ipsam? Nesciunt voluptatum
-        placeat labore.
-      </p>
-      <a href="#footer">Go to Footer</a>
-    </section>
-    <section id="footer">
-        <h1>Footer</h1>
-      <p class="blue">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
-        laborum!
-      </p>
-      <a href="#home">Back to top</a>
-    </section>
+    <div class="box">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis, nostrum.
+    </div>
   </body>
 </html>
