--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   </head>
 
   <body>
-    <div class="box">
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis, nostrum.
-    </div>
+    <p>My name is Ryan</p>
+    <span>My name is Ryan</span>
   </body>
 </html>
