--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
   </head>
 
   <body>
-    <div>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas soluta
-      laudantium enim minus ullam delectus fugit, dolorum explicabo quod dolorem
-      deserunt architecto nobis neque nostrum aut id ratione autem doloribus.
-    </div>
+    <div>Welcome to</div>
+    <button>Contrast</button>
   </body>
 </html>
